fixing layout issue

--- a/src/components/style.scss
+++ b/src/components/style.scss
@@ -14,7 +14,10 @@ html {
 
 * {
     box-sizing: border-box;
+    
 }
+
+
 
 
 
@@ -24,20 +27,22 @@ html {
     max-width: 600px;
     width: 100%;
     margin: 200px 0px 0px 0px;
-    padding-left: 25px;
+    padding-left: 10px;
 
     h1 {
         text-align:  left;
         padding-left: 15px;
         font-family: Caudex;
         font-size: 45px;
+        width: 100%;
     }
 
 
     p {
-       margin: 60px 0px 35px 20px;
+       margin: 60px 10px 35px 20px;
        max-width: 400px;    
        text-align: justify;
+       width: 100%;
     }
 
     .formContato {
@@ -45,7 +50,7 @@ html {
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        max-width: 400px;
+        max-width: 450px;
         width: 100%;
 
 
@@ -170,7 +175,7 @@ html {
         z-index: 999;
         align-items: center;
         justify-content: space-around;
-        width: calc(100% - 10px);
+        width: 100%;
         top: 0;
         height: 100px;
         overflow-x: hidden;
@@ -213,18 +218,17 @@ html {
 .menuAtivo {
     display: flex;
     flex-direction: column;
-    width: 100%;
+    align-items: center;
     margin-top: 100px;
     background-color: rgba(241, 241, 241, 0.8);
     z-index: 99999;
     position: fixed;
-    height: 100%;
+    width: calc(100% - 10px);
 }
 
 .ul-mobile {
     display: flex;
     flex-direction: column;
-    width: 100%;
     align-items: center;
     justify-content: center;
     margin: 0;
